# quda-QKXTM-Multigrid

./: .gitignore  CMakeLists.txt  README  README.md
include/: color_spinor_field.h  contractQuda.h  dirac_quda.h  invert_quda.h  multigrid.h  quda.h  qudaQKXTM.h.LEGACY  qudaQKXTM_Kepler.h  qudaQKXTM_Kepler_utils.h  su3_project.cuh
lib/: CMakeLists.txt  Makefile  blas_magma.cu  color_spinor_field.cpp  covd.cpp  cuda_color_spinor_field.cu  dirac_twisted_clover.cpp  dirac_twisted_mass.cpp  dslash_quda.cu  interface_quda.cpp  inv_gcr_quda.cpp  multigrid.cpp  qudaQKXTM.cu.LEGACY  qudaQKXTM_Contraction_Kepler.cpp  qudaQKXTM_Deflation_Kepler.cpp  qudaQKXTM_Field_Kepler.cpp  qudaQKXTM_Gauge_Kepler.cpp  qudaQKXTM_Kepler.cpp  qudaQKXTM_Kepler_interface.cpp  qudaQKXTM_Kepler_kernels.cu  qudaQKXTM_Kepler_utils.cpp  qudaQKXTM_Loops_Kepler.cpp  qudaQKXTM_Propagator_Kepler.cpp  qudaQKXTM_Vector_Kepler.cpp  restrictor.cu
lib/HProb/: Hprobing.cpp  hch_stochastic_sources.py
lib/code_pieces_Kepler/: Gauss_core_Kepler.h  apply_gamma5_propagator_core_Kepler.h  apply_gamma5_vector_core_Kepler.h  arpackHeaders.h  castDoubleToFloat_core_Kepler.h  castFloatToDouble_core_Kepler.h  conjugate_propagator_core_Kepler.h  conjugate_vector_core_Kepler.h  contractBaryons_core_Kepler.h  contractBaryons_core_Kepler_PosSpace.h  contractBaryons_core_Kepler_backup.h  contractMesons_core_Kepler.h  contractMesons_core_Kepler_PosSpace.h  contractMesons_core_Kepler_backup.h  core_def_Kepler.h  cuPrintf.cu  downloadFromCuda_core_Kepler.h  fixSinkContractions_local_core_Kepler.h  fixSinkContractions_local_core_Kepler_PosSpace.h  fixSinkContractions_noether_core_Kepler.h  fixSinkContractions_noether_core_Kepler_PosSpace.h  fixSinkContractions_oneD_core_Kepler.h  fixSinkContractions_oneD_core_Kepler_PosSpace.h  fixSinkContractions_oneD_core_Kepler_bdf.h  g5_prop_G_dag_g5.h  gammas_tm_base.h  plaquette_core_Kepler.h  projectors_tm_base.h  rotateToPhysicalBase_core_Kepler.h  scaleVector_core_Kepler.h  seqSourceFixSinkPart1_core_Kepler.h  seqSourceFixSinkPart2_core_Kepler.h  sortingFunctions.h  uploadToCuda_core_Kepler.h
lib/dslash_core/: covDev_mu0_core.h  covDev_mu0_dagger_core.h  covDev_mu1_core.h  covDev_mu1_dagger_core.h  covDev_mu2_core.h  covDev_mu2_dagger_core.h  covDev_mu3_core.h  covDev_mu3_dagger_core.h
qkxtm/: CMakeLists.txt  CalcMG_2pt3pt_EvenOdd.cpp  CalcMG_Loops_w_oneD_TSM_EvenOdd.cpp  CalcMG_Loops_w_oneD_TSM_wExact.cpp  QKXTM_mapping_parity.h  QKXTM_read_conf.h  QKXTM_util.cpp  QKXTM_util.h  misc.cpp
tests/: CMakeLists.txt  multigrid_invert_test.cpp  pack_test.cpp  su3_test.cpp  test_util.cpp
